# hobo

./: .gitmodules  HoboGen.hs  README.md  TODO  hobogen.cabal  make_hsenv.sh
dist_hobo/: setup-config
example/posts/2013-06-22-Another-Post/: post.md
example/posts/2013-06-23-Sample-Post/: post.md
example/static/css/: hobo.css  simple.min.css  simple.min.css~
example/templates/: .#head.html  archive.html  foot.html  head.html
