name:                hobogen
version:             0.2.0.0
synopsis:            Minimalist HTML generator
description:         A blog oriented minimalist html generator based on the hobo engine.
homepage:            https://github.com/edahlgren/hobo
license:             BSD3
license-file:        LICENSE
author:              Jamie Turner, Erin Dahlgren
maintainer:          eedahlgren@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable hobogen
  main-is:             HoboGen.hs
  build-depends:       base >= 4 && < 5,
                       scotty >= 0.4.5,
                       bytestring,
                       old-locale,
                       time >=1.4,
                       text >=0.11,
                       hastache == 0.4.*,
                       directory >=1.1,
                       filepath >=1.3,
                       hdiscount >=0.1.1.0,
                       attoparsec >=0.10,
                       mtl >=2.1,
                       aeson >=0.6,
                       unordered-containers >=0.2,
                       wai,
                       wai-extra,
                       wai-middleware-static
